# nekonet-autoupdate

./: ATTRIBUTION.md  CHANGELOG.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSION.md  auto-update.md  deploy-fleet.sh  install.sh  pyproject.toml  sample.env  uninstall.sh
config/: fleet.conf  fleet.json  fleet.yaml  sample.env
docs/administrator/: Architecture.md  Failover.md  README.md  Safety.md  Storage.md
docs/developer/: README.md  State-Machine.md  Testing.md
docs/getting-started/: Configuration.md  Fleet-Deployment.md  INSTALL-v0.2.md  Installation.md  PRODUCTION-INSTALL.md  README.md
docs/reference/: README.md
docs/user-guide/: Fleet-Management.md
scripts/: fleet-wizard.py  nekonet-autoupdate-coordinator  nekonet-worker  remote-worker.sh  sync-certificates.sh
src/nekonet_autoupdate/: admin.py  config.py  main.py  service.py
src/nekonet_autoupdate/api/: app.py
src/nekonet_autoupdate/coordinator/: fleet_registry.py  preflight.py  remote.py  state_machine.py
src/nekonet_autoupdate/models/: fleet.py  state.py
src/nekonet_autoupdate/notifications/: discord.py
src/nekonet_autoupdate/storage/: base.py  history.py  json_store.py  manager.py  peer_sync.py  (+1 more)
systemd/: nekonet-autoupdate-run.service  nekonet-autoupdate.service  nekonet-autoupdate.timer  nekonet-cert-sync.service  nekonet-cert-sync.timer
tests/: test_canary_policy.py  test_fail_closed.py  test_fleet_registry.py  test_json_store.py  test_public_api_readonly.py  test_state_machine.py  test_storage_manager.py  test_storage_recovery.py  test_storage_repair.py
