[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekonet-autoupdate"
version = "0.2.0"
description = "High-availability, fail-closed Ubuntu fleet update orchestrator."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "asyncmy>=0.2",
  "asyncpg>=0.29",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
nekonet-autoupdate = "nekonet_autoupdate.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
